[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-load-balancer"
version = "0.1.0"
description = "A proxy load balancer."
authors = [
    {name = "EvgeniiDev"}
]
readme = ""
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["proxy_load_balancer"]
